add_library(Client
specific.h
stdafx.cpp
stdafx.h
MainLoop.component
MainLoop.cpp
MainLoop.h
MainTimer.cpp
MainTimer.h
ScreenCommands.cpp
ScreenCommands.h
VSyncController.cpp
VSyncController.h
Console.component
Console.cpp
Console.h
ConsoleLogic.cpp
ConsoleLogic.h
AdventureScreenBaseClient.h
BaseOvertipsScreenLogic.cpp
BaseOvertipsScreenLogic.h
DefaultScreenBase.cpp
DefaultScreenBase.h
Overtips.h
ScreenBase.h
Screens.component
ScreenUILogicBase.cpp
ScreenUILogicBase.h
WasserzeichenScreen.cpp
WasserzeichenScreen.h
Tooltips.component
Tooltips.h
TooltipsScreen.cpp
TooltipsScreen.h
TooltipsScreenLogic.cpp
TooltipsScreenLogic.h
MessageDialog.h
MessageScreen.component
MessageScreen.cpp
MessageScreen.h
MessageScreenLogic.cpp
MessageScreenLogic.h
DebugTextDraw.component
DebugTextDraw.cpp
DebugTextDraw.h
CommandBinds.component
CommandBinds.cpp
CommandBinds.h
all.component
#ClassDiagram1.cd not found
#../Version.rc ExcludedFromBuild
)
target_include_directories(Client PRIVATE ${SRCROOT})
