add_library(PF_Core
specific.h
stdafx.cpp
stdafx.h
#TestWorld.cpp ExcludedFromBuild
Base.component
ClientObject.h
Interfaces.component
IUpdateable.cpp
IUpdateable.h
World.component
World.cpp
World.h
World.hpp
WorldObject.h
AnimatedTexture.cpp
AnimatedTexture.h
BasicEffect.cpp
BasicEffect.h
CameraShakeController.cpp
CameraShakeController.h
CameraShakeSceneComponent.cpp
CameraShakeSceneComponent.h
ChangeMaterialEffect.cpp
ChangeMaterialEffect.h
ColorModificationChannel.h
ControlledStatusEffect.cpp
ControlledStatusEffect.h
DBEffect.cpp
DBEffect.h
DBEffects.component
EffectGenSceneComponent.cpp
EffectGenSceneComponent.h
Effects.component
EffectsPool.cpp
EffectsPool.h
EnableSCEffect.cpp
EnableSCEffect.h
GhostEffect.cpp
GhostEffect.h
LightningEffect.cpp
LightningEffect.h
ObjectsPool.cpp
ObjectsPool.h
ParticleSceneComponentWithEffect.cpp
ParticleSceneComponentWithEffect.h
RecolorableTexture.cpp
RecolorableTexture.h
ScaleColorEffect.cpp
ScaleColorEffect.h
SpectatorEffectsPool.cpp
SpectatorEffectsPool.h
SpringSceneComponent.cpp
SpringSceneComponent.h
TraceGenSceneComponent.cpp
TraceGenSceneComponent.h
#../Version.rc ExcludedFromBuild
all.component
ForceLink.cpp
ForceLink.h
Implementation.component
)
target_include_directories(PF_Core PRIVATE ${SRCROOT})
