add_library(PF_Minigames
#Clinic.cpp ExcludedFromBuild
#Clinic.h ExcludedFromBuild
#ClinicBonus.cpp ExcludedFromBuild
#ClinicBonus.h ExcludedFromBuild
#ClinicCommands.cpp ExcludedFromBuild
#ClinicCommands.h ExcludedFromBuild
#ClinicCreep.cpp ExcludedFromBuild
#ClinicCreep.h ExcludedFromBuild
#ClinicCreepWish.h ExcludedFromBuild
#ClinicEntrance.cpp ExcludedFromBuild
#ClinicEntrance.h ExcludedFromBuild
#ClinicHeader.h ExcludedFromBuild
#ClinicItem.cpp ExcludedFromBuild
#ClinicItem.h ExcludedFromBuild
#ClinicPlace.cpp ExcludedFromBuild
#ClinicPlace.h ExcludedFromBuild
#ClinicPlayer.cpp ExcludedFromBuild
#ClinicPlayer.h ExcludedFromBuild
#ClinicUIDesc.h ExcludedFromBuild
#CreepStates.cpp ExcludedFromBuild
#CreepStates.h ExcludedFromBuild
#Random.h ExcludedFromBuild
# ClinicBuyDialog.cpp ExcludedFromBuild
# ClinicBuyDialog.h ExcludedFromBuild
# ClinicGiftsDialog.cpp ExcludedFromBuild
# ClinicGiftsDialog.h ExcludedFromBuild
# ClinicLobbyScreen.cpp ExcludedFromBuild
# ClinicLobbyScreen.h ExcludedFromBuild
# ClinicLobbyScreenLogic.cpp ExcludedFromBuild
# ClinicLobbyScreenLogic.h ExcludedFromBuild
# ClinicResultsScreen.cpp ExcludedFromBuild
# ClinicResultsScreen.h ExcludedFromBuild
# ClinicResultsScreenLogic.cpp ExcludedFromBuild
# ClinicResultsScreenLogic.h ExcludedFromBuild
# ClinicScreen.cpp ExcludedFromBuild
# ClinicScreen.h ExcludedFromBuild
# ClinicScreenLogic.cpp ExcludedFromBuild
# ClinicScreenLogic.h ExcludedFromBuild
# ClinicShopScreen.cpp ExcludedFromBuild
# ClinicShopScreen.h ExcludedFromBuild
# ClinicShopScreenLogic.cpp ExcludedFromBuild
# ClinicShopScreenLogic.h ExcludedFromBuild
# ClinicBonusClientObject.cpp ExcludedFromBuild
# ClinicBonusClientObject.h ExcludedFromBuild
# ClinicCreepClientObject.cpp ExcludedFromBuild
# ClinicCreepClientObject.h ExcludedFromBuild
# ClinicDecorationObject.h ExcludedFromBuild
# ClinicEntranceClientObject.cpp ExcludedFromBuild
# ClinicEntranceClientObject.h ExcludedFromBuild
# ClinicPlaceClientObject.cpp ExcludedFromBuild
# ClinicPlaceClientObject.h ExcludedFromBuild
# ClinicPlayerClientObject.cpp ExcludedFromBuild
# ClinicPlayerClientObject.h ExcludedFromBuild
DB.component
DBClinic.cpp
DBClinic.h
DBEasel.cpp
DBEasel.h
DBMinigames.cpp
DBMinigames.h
AnimationController.component
MovingUnitController.cpp
MovingUnitController.h
Game_Easel.component
 LuxBoard.cpp
 LuxBoard.h
 LuxDef.h
 LuxGameLogic.cpp
 LuxGameLogic.h
 PaintLogic.cpp
 PaintLogic.h
  LuxPlatform.cpp
  LuxPlatform.h
  LuxPlatformBoard.cpp
  LuxPlatformBoard.h
  LuxChainGenerator.cpp
  LuxChainGenerator.h
  LuxGameBoard.cpp
  LuxGameBoard.h
  LuxGameBoardChains.cpp
  LuxGameBoardChains.h
  LuxFallingBoard.cpp
  LuxFallingBoard.h
  EaselTrajectory.cpp
  EaselTrajectory.h
  LuxBall.cpp
  LuxBall.h
  LuxBallChain.cpp
  LuxBallChain.h
  LuxCollidable.h
  LuxFallingObject.cpp
  LuxFallingObject.h
  LuxMagnet.cpp
  LuxMagnet.h
  LuxPath.cpp
  LuxPath.h
  PaintFragment.cpp
  PaintFragment.h
  PaintPoint.cpp
  PaintPoint.h
   LuxBallColorChangedNotification.h
   LuxBallCreateNotification.h
   LuxBallDeleteNotification.h
   LuxBallExplodedNotification.h
   LuxBallFiredNotification.h
   LuxBallHitNotification.h
   LuxBallInTunnelNotifications.h
   LuxBallMissNotification.h
   LuxAlchemistBoostsNotifications.h
   LuxSorterBoostFiredNotification.h
   LuxChainBallAddedNotification.h
   LuxChainDestroyedNotification.h
   LuxChainElementExplodedNotification.h
   LuxChainFallingNotification.h
   LuxChainGeneratedNotification.h
   LuxChainMergedNotification.h
   LuxChainMovingNotification.h
   LuxChainSlideLowNotification.h
   LuxChainStoppedNotification.h
   LuxBoardRequestStateChangeNotification.h
   EaselGameLostNotitfication.h
   EaselGameWonNotitfication.h
   PaintFlyingNotification.h
  LuxAlchemistBoost.cpp
  LuxAlchemistBoost.h
  LuxBoost.cpp
  LuxBoost.h
  LuxFreezeBoost.cpp
  LuxFreezeBoost.h
  LuxJokerBoost.cpp
  LuxJokerBoost.h
  LuxMagnetBoost.cpp
  LuxMagnetBoost.h
  LuxPaintBlastBoost.cpp
  LuxPaintBlastBoost.h
  LuxSorterBoost.cpp
  LuxSorterBoost.h
  BoostBoard.cpp
  BoostBoard.h
  BoostsFactory.cpp
  BoostsFactory.h
 EaselFailScreen.cpp
 EaselFailScreen.h
 EaselFailScreenLogic.cpp
 EaselFailScreenLogic.h
 EaselScreen.cpp
 EaselScreen.h
 EaselScreenLobby.cpp
 EaselScreenLobby.h
 EaselScreenLogic.cpp
 EaselScreenLogic.h
 EaselScreenLogicLobby.cpp
 EaselScreenLogicLobby.h
 EaselScreenLogicResults.cpp
 EaselScreenLogicResults.h
 EaselScreenResults.cpp
 EaselScreenResults.h
 EaselScreensManager.cpp
 EaselScreensManager.h
 EaselEventSounds.cpp
 EaselEventSounds.h
 EaselFModEvent.cpp
 EaselFModEvent.h
 EaselSoundsInterface.h
 SoundObserver.cpp
 SoundObserver.h
 EaselStatistics.cpp
 EaselStatistics.h
 EaselClient.cpp
 EaselClient.h
 EaselConstants.cpp
 EaselConstants.h
 EaselDef.h
 EaselView.cpp
 EaselView.h
  EaselMath.cpp
  EaselMath.h
  EaselNotifications.cpp
  EaselNotifications.h
  EaselWorldClientConvertHelper.cpp
  EaselWorldClientConvertHelper.h
  Easel.cpp
  Easel.h
  EaselCommands.cpp
  EaselCommands.h
  EaselLocal.cpp
  EaselLocal.h
  EaselMinigame.cpp
  EaselMinigame.h
  EaselRemote.cpp
  EaselRemote.h
  EaselPriestess.cpp
  EaselPriestess.h
  EaselWorld.cpp
  EaselWorld.h
  EaselWorldObject.h
 EaselBallView.cpp
 EaselBallView.h
 EaselLuxLerp.cpp
 EaselLuxLerp.h
 EaselLuxLerpContainer.cpp
 EaselLuxLerpContainer.h
 EaselLuxStaticObject.cpp
 EaselLuxStaticObject.h
 EaselLuxView.cpp
 EaselLuxView.h
 EaselLuxViewBambooObject.cpp
 EaselLuxViewBambooObject.h
 EaselLuxViewDropDirector.cpp
 EaselLuxViewDropDirector.h
 EaselLuxViewFallingObject.cpp
 EaselLuxViewFallingObject.h
 EaselLuxViewPath.cpp
 EaselLuxViewPath.h
 EaselLuxViewPlatform.cpp
 EaselLuxViewPlatform.h
 EaselLuxViewTunnelPoint.cpp
 EaselLuxViewTunnelPoint.h
 EaselLuxViewWellObject.cpp
 EaselLuxViewWellObject.h
 EaselPaintBlastBallView.cpp
 EaselPaintBlastBallView.h
 EaselPaintLayerSceneComponent.cpp
 EaselPaintLayerSceneComponent.h
 EaselPaintView.cpp
 EaselPaintView.h
 EaselPaintViewFragment.cpp
 EaselPaintViewFragment.h
 EaselPaintViewPicture.cpp
 EaselPaintViewPicture.h
 EaselViewAlchemistPot.cpp
 EaselViewAlchemistPot.h
 EaselViewEffects.cpp
 EaselViewEffects.h
  RollCoordsConverter.cpp
  RollCoordsConverter.h
  ViewBallCoordsConverter.cpp
  ViewBallCoordsConverter.h
MinigameBase.cpp
MinigameBase.h
MinigameClientObject.cpp
MinigameClientObject.h
MinigameCommands.cpp
MinigameCommands.h
Minigames.cpp
Minigames.h
MinigamesBase.cpp
MinigamesBase.h
MinigameSessionInterface.cpp
MinigameSessionInterface.h
MinigamesMain.cpp
MinigamesMain.h
MinigameWorldObject.cpp
MinigameWorldObject.h
MovingUnitClientObject.cpp
MovingUnitClientObject.h
Random.cpp
SingleMinigame.cpp
SingleMinigame.h
 MinigameLobbyScreen.cpp
 MinigameLobbyScreen.h
 MinigameLobbyScreenLogic.cpp
 MinigameLobbyScreenLogic.h
 MinigamePauseDialog.cpp
 MinigamePauseDialog.h
 MinigameScreen.cpp
 MinigameScreen.h
 MinigameScreenLogic.cpp
 MinigameScreenLogic.h
 MinigameCameraController.cpp
 MinigameCameraController.h
 SpringInterpoler.h
specific.h
stdafx.cpp
stdafx.h
#../Version.rc ExcludedFromBuild
all.component
ForceLink.cpp
ForceLink.h
Framework.component
Game_Clinic.component
)
target_include_directories(PF_Minigames PRIVATE
${SRCROOT}
${SRCROOT}/Game/PF
${SRCROOT}/Server)
target_link_libraries(PF_Minigames PRIVATE Boost::headers)
